# ICML-LDARNet

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  pretrain.py  pyproject.toml
evaluation/: README.md  eval_nt.py  run_eval.sh
evaluation/fold_results/H3/lr0.0001_bs64/fold0/: test_results.json
evaluation/fold_results/H3/lr0.0001_bs64/fold1/: test_results.json
evaluation/fold_results/H3/lr0.0001_bs64/fold2/: test_results.json
evaluation/fold_results/H3/lr0.0001_bs64/fold3/: test_results.json
evaluation/fold_results/H3/lr0.0001_bs64/fold4/: test_results.json
evaluation/fold_results/H3/lr0.0001_bs64/fold5/: test_results.json
evaluation/fold_results/H3/lr0.0001_bs64/fold6/: test_results.json
evaluation/fold_results/H3/lr0.0001_bs64/fold7/: test_results.json
evaluation/fold_results/H3/lr0.0001_bs64/fold8/: test_results.json
evaluation/fold_results/H3/lr0.0001_bs64/fold9/: test_results.json
evaluation/fold_results/H3K14ac/lr0.0001_bs64/fold0/: test_results.json
evaluation/fold_results/H3K14ac/lr0.0001_bs64/fold1/: test_results.json
evaluation/fold_results/H3K14ac/lr0.0001_bs64/fold2/: test_results.json
ldar/: __init__.py
ldar/models/: __init__.py  config_ldar.py  ldar.py  mixer_seq.py
ldar/modules/: __init__.py  block.py  dc.py  isotropic.py  mha.py  rotary.py
ldar/pretrain_utils/: ldar_dataset_vs_nt_data.py  mlm_collator.py
ldar/utils/: __init__.py  ckpt.py  tokenizers.py  train.py
notebooks/: boundary_interpretability.ipynb
scripts/: download_wheels.sh  verify_env.sh
wheels/: README.md
(+167 files in other folders)
